More spacing fixes

--- a/docs/mystyle.css
+++ b/docs/mystyle.css
@@ -206,7 +206,15 @@ section ul {
 }
 
 form > fieldset {
+    padding: 10px;
+    gap: 10px;
+    margin: 0;
+
+    display: block;
+
+    background-color: lavender;
     border: 2px solid rgb(171, 113, 246);
+    border-radius: 20px;
 }
 
 details > summary {
@@ -228,7 +236,8 @@ button:active {
 
 button {
     font-size: 2rem;
-    padding: 10px 20px;
+    padding: 8px 16px;
+    margin-top: 10px;
     cursor: pointer;
     background-color:lightcyan;
 }
@@ -248,20 +257,31 @@ button {
 }
 
 form:has(input[type="checkbox"]) {
-    background-color: lavender;
-    padding: 15px;
+    padding: 20px;
     border-radius: 20px;
+}
+
+legend {
+    font-weight: bold;
 }
 
 input, textarea, select {
     font-size: 1.2rem;
 
     padding: 10px;
-    width: 100%;
+    width: auto;
     max-width: 300px;
     border-radius: 6px;
 
     border: 1px solid;
+    margin-bottom: 10px;
+}
+
+label, input[type="radio"], input[type="checkbox"] {
+    display: inline-block;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    vertical-align: middle;
 }
 
 
